fix: multiple select search input doesn't show normally on Safari (#22586)
* Fix input padding in multple select #21950

* move padding style

--- a/components/select/style/index.less
+++ b/components/select/style/index.less
@@ -310,6 +310,7 @@
       .@{select-prefix-cls}-search__field {
         width: 0.75em;
         max-width: 100%;
+        padding: 1px;
       }
     }
 
@@ -469,7 +470,7 @@
   &-menu {
     max-height: 250px;
     margin-bottom: 0;
-    padding: @select-dropdown-edge-child-vertical-padding 0;  //Change
+    padding: @select-dropdown-edge-child-vertical-padding 0; //Change
     padding-left: 0; // Override default ul/ol
     overflow: auto;
     list-style: none;
